# bent

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
include/bent/: bent.hpp  component_manager.hpp  entity_handle.hpp  view.hpp  world.hpp
include/bent/internal/: component_pool.hpp  component_pool_factory.hpp  definitions.hpp  dynamic_constructor.hpp  dynamic_region_allocator.hpp  entity_id_manager.hpp  entity_manager.hpp  region.hpp  region_allocator.hpp  world_state.hpp
lib/: region.cpp  world.cpp  world_state.cpp
test/: component_manager_test.cpp  component_pool_factory_test.cpp  component_pool_test.cpp  dynamic_constructor_test.cpp  dynamic_region_allocator_test.cpp  entity_handle_test.cpp  entity_id_manager_test.cpp  region_allocator_test.cpp  region_test.cpp  view_test.cpp  world_state_test.cpp  world_test.cpp
test/components/: position.hpp  renderable.hpp  unko.hpp  velocity.hpp
